2006-05-21  Steve Frécinaux  <steve@istique.net>

	* tools/generate-plugins.py:
	* tools/preprocessor.py:

	New plugin generator, able to generate python and C plugin skelettons.
	See ./generate-plugins.py --help

	* tools/plugin_template/Makefile.am:
	* tools/plugin_template/gedit-plugin.desktop.in:
	* tools/plugin_template/gedit-plugin-helper.py:
	* tools/plugin_template/gedit-plugin-nohelper.py:
	* tools/plugin_template/gedit-plugin.c:
	* tools/plugin_template/gedit-plugin.h:

	Templates for the generator.

	* tools/.cvsignore: ignore *.pyc files.

2006-05-21  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #342208 - show 'next tab' and 'previous tab' menu items
	
	* gedit/gedit-commands-documents.c
	(gedit_cmd_documents_previous_document)
	(gedit_cmd_documents_next_document): new methods

	* gedit/gedit-commands.h: new 
	gedit_cmd_documents_[previous|next]_document methods

	* gedit/gedit-ui.h: added icon to "Select All", added new actions
	for "Next|Previous Document"

	* gedit/gedit-ui.xml:  added new menu items
	for "Next|Previous Document"

	* gedit/gedit-window.c (update_next_prev_doc_sensitivity)
	(update_next_prev_doc_sensitivity_per_window)
	(set_sensitivity_according_to_tab) (notebook_tab_added)
	(notebook_tab_removed) (notebook_tabs_reordered): update sensitivity
	of "Next|Previous Document" menu item

2006-05-20  Steve Frécinaux  <steve@istique.net>

	* gedit/Makefile.am: Add gedit-prefs-manager-private.h to
	NOINST_H_FILES.
	
	* docs/reference/Makefile.am:
	* docs/reference/gedit.types:
	* docs/reference/gedit-docs.sgml:
	
	Ignore private header files when generating the docs (typically, NOINST
	and cut'n'pasted files).
	
	* docs/reference/tmpl/*: Add template files.

2006-05-20  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-window.c (create_language_menu_item)
	(create_languages_menu) (update_languages_menu): use "None" instead of
	"Normal" in the Highlight Mode menu

2006-05-19  Steve Frécinaux  <steve@istique.net>
