@@ -1,5 +1,16 @@
 2006-05-21  Steve Frécinaux  <steve@istique.net>
 
+	* tools/generate-plugin.py: Removed hint for gconf code generation in
+	plugin generator (gconf usage is not generic enough)
+	
+	* tools/plugin_template/gedit-plugin-helper.py:
+	* tools/plugin_template/gedit-plugin-nohelper.py:
+	* tools/plugin_template/gedit-plugin.c:
+	
+	Added support for --with-menu generation option.
+
+2006-05-21  Steve Frécinaux  <steve@istique.net>
+
 	* tools/generate-plugins.py:
 	* tools/preprocessor.py:
 
